# GrauA-FCG25

./: .gitignore  CMakeLists.txt  README.md
common/: glad.c
common/systems/: game.cpp  resourceManager.cpp
common/utility/: shader.cpp  texture2D.cpp
include/glad/: glad.h
include/systems/: game.h  resourceManager.h
include/utility/: shader.h  texture2D.h
src/: main.cpp
